# appv

./: configure_qt_ssl.bat  qt-5.12.10.bat  salome_qgis.bat
.github/workflows/: build.yml
mainwin/: CMakeLists.txt  mainwin.cpp
